--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Nature & cie</title>
+    <title>Nature & cie - Nos Magasins</title>
     <link rel="stylesheet" href="css/styles.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.0-2/js/all.min.js"></script>
 </head>
@@ -17,7 +17,7 @@
             </nav>
         </header>
         <div class="landing-page">
-             <h1 class="big-title">Nature & cie, toutes le meilleures plantes</h1>
+             <h1 class="big-title">Nos magasins</h1>
              <a class="scroll" href="">Les magasins disponnibles :</a>
         </div>
         
