--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Nature & cie - Nos Magasins</title>
     <link rel="stylesheet" href="css/styles.css">
+    <link rel="shortcut icon" href="images/petitlogogreen.png">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.0-2/js/all.min.js"></script>
 </head>
 <body>
